<resources>
    <string name="app_name">GitHubRepos</string>
    <string name="loading">Loading...</string>
    <string name="empty_list">Empty list</string>
    <string name="standard_owner">Owner</string>
    <string name="standard_title">Repository</string>
    <string name="owner">Owner:</string>
    <string name="repository">Repository:</string>
    <string name="standard_description">Standard description of a someones repo</string>
    <string name="description">Repository Description:</string>
    <string name="empty_search">The search\'s string is empty</string>
    <string name="go_to_repository">Go to repository</string>
    <string name="owner_pic_hint">Owner profile image</string>
    <string name="retry">Retry</string>
</resources>