<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/dimen_user_image"
            android:layout_height="@dimen/dimen_user_image"
            android:contentDescription="@string/owner_pic_hint"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/header_info"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_info"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="@dimen/dimen_user_image"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:background="@drawable/outside_shape"
            android:elevation="@dimen/dimen_1_dp"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_title"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8_dp"
                android:text="@string/standard_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_24_sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/owner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_0_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:text="@string/owner"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/repo_owner"
                app:layout_constraintTop_toBottomOf="@id/repo_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/repo_owner"
                android:layout_width="@dimen/dimen_0_dp"
                android:layout_height="wrap_content"
                android:text="@string/standard_owner"
                app:layout_constraintLeft_toRightOf="@id/owner"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/owner" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_32_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/repo_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/outside_shape"
        android:padding="@dimen/dimen_16_dp"
        android:text="@string/standard_description"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/repo_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/repo_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>