<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_6_dp"
    app:cardElevation="@dimen/dimen_5_dp"
    app:strokeColor="@color/borderGray"
    android:backgroundTint="@color/background_color"
    app:strokeWidth="@dimen/dimen_1_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16_dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/repo"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/repo_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/repo_title"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:text="@string/standard_title"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16_sp"
            android:layout_marginStart="@dimen/dimen_8_dp"
            app:layout_constraintLeft_toRightOf="@id/repo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/owner"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textColor="@color/ownerGray"
            android:textSize="@dimen/dimen_16_sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repo_title"
            app:layout_constraintBottom_toBottomOf="@id/repo_owner"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/repo_owner"
            android:layout_width="@dimen/dimen_0_dp"
            android:layout_height="wrap_content"
            android:text="@string/standard_owner"
            android:textColor="@color/ownerGray"
            android:textSize="@dimen/dimen_16_sp"
            android:layout_marginStart="@dimen/dimen_8_dp"
            app:layout_constraintLeft_toRightOf="@id/owner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/owner"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>